--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,20 @@
 {
+    "name": "Jlopez/CodeReview",
+    "description": "The Great tool to do easy code review's",
+    "author": [
+      {
+        "name": "Javier Lopez Lopez",
+        "email": "sjavierlopez@gmail.com"
+      }
+    ],
+    "minimum-stability": "dev",
     "require": {
         "symfony/console": "^2.7",
         "knplabs/github-api": "^1.4"
+    },
+    "autoload" : {
+      "psr-4": {
+        "Jlopez\\": "src/Jlopez"
+      }
     }
 }
