--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "minimum-stability": "dev",
     "require": {
         "symfony/console": "^2.7",
-        "knplabs/github-api": "^1.4"
+        "knplabs/github-api": "^1.4",
+        "symfony/dependency-injection": "^3.0@dev"
     },
     "autoload" : {
       "psr-4": {
